--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav>
 	<ul class=" nav nav-tabs">
 		<li class="active"><a href="#"> Inicio</a></li>
-		<li><a href="#"> Contacto</a></li>
+		<li class="active"><a href="#"> Contacto</a></li>
 		<li><a href="#"> Noticias</a></li>
 		<li><a href="#"> Proyecto</a></li>
 
@@ -25,19 +25,21 @@
 		<label>Nombre</label>
 		<input type="text" class="form-control" name="nombre" placeholder="Escriba su Nombre" required>
 		<label>Email</label>
-		<input type="email" class="form-control" name="emal" placeholder="Escriba su Email" required>
+		<input type="email" class="form-control" name="email" placeholder="Escriba su Email" required>
 		<label>Edad</label>
 		<input type="number" class="form-control" name="edad" placeholder="Ingrese su Edad" required min="0" max="100">
 		<label>Fecha de Nascimiento</label>
 		<input type="date" class="form-control" name="fecha" required>
+		<label>Telefono</label>
+		<input type="number" class="form-control" name="telefono" placeholder="Numero de Telefono" required>
+		<br>
 		<input type="submit" class="btn-primary">
 	</form>
-
-
-</section>
-<footer>
 	
+</section>
 
+<footer>
+	<h4>Copyright - 2016 - Prohibido Copiar</h4>
 
 </footer>
 </body>
